<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.stickearn.stickpass.view.main.MainActivity">
    <item
        android:id="@+id/action_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home_black_24dp"
        />
    <item
        android:id="@+id/action_history"
        android:title="@string/history"
        android:icon="@drawable/ic_history_black_24dp"
        />
    <item
        android:id="@+id/action_notif"
        android:title="@string/notification"
        android:icon="@drawable/ic_notifications_black_24dp"
        />
    <item
        android:id="@+id/action_account"
        android:title="@string/account"
        android:icon="@drawable/ic_person_black_24dp"
        />
</menu>
