<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/size_16dp"
    tools:context="com.stickearn.stickpass.view.order_failed.OrderFailedActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieFailed"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        app:lottie_autoPlay="true"
        app:lottie_fileName="crying.json" />

    <TextView
        android:id="@+id/tv_failed_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/size_6dp"
        android:gravity="center"
        android:text="@string/order_failed"
        android:textSize="@dimen/size_24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_failed_title"
        android:layout_marginTop="@dimen/size_6dp"
        android:gravity="center"
        android:text="@string/oops"
        android:textSize="@dimen/size_16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/size_24dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_corner_red"
            android:text="@string/cancel_order"
            android:textAllCaps="false"
            android:textColor="@color/colorRed" />

        <View
            android:layout_width="@dimen/size_16dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btn_try_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_rounded_red"
            android:text="@string/try_again"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

</RelativeLayout>
