<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/size_16dp"
    android:id="@+id/cl_order_detail"
    tools:context="com.stickearn.stickpass.view.order_complete.OrderCompleteActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:lottie_fileName="success.json"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thank_you"
        android:gravity="center"
        android:textSize="@dimen/size_24sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/size_6dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_order_is_confirmed"
        android:textSize="@dimen/size_16sp"
        android:gravity="center"
        android:layout_marginTop="@dimen/size_6dp"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_number"
                android:padding="@dimen/size_16dp"/>

            <TextView
                android:id="@+id/tv_order_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20180131"
                android:layout_alignParentRight="true"
                android:padding="@dimen/size_16dp"/>

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGray"
                android:layout_below="@+id/tv_order_number"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/final_amount"
                android:padding="@dimen/size_16dp"
                android:layout_below="@+id/view4"/>

            <TextView
                android:id="@+id/tv_final_ammount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20180131"
                android:layout_alignParentRight="true"
                android:padding="@dimen/size_16dp"
                android:layout_below="@+id/view4"/>

            <TextView
                android:id="@+id/tv_detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_detail"
                android:paddingLeft="@dimen/size_16dp"
                android:paddingTop="@dimen/size_16dp"
                android:layout_below="@+id/view1"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_order_detail"
                android:layout_below="@+id/tv_detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGray"
                android:layout_below="@+id/rv_order_detail"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_method"
                android:padding="@dimen/size_16dp"
                android:layout_below="@+id/view3"/>

            <TextView
                android:id="@+id/tv_payment_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="20180131"
                android:padding="@dimen/size_16dp"
                android:layout_below="@+id/view3"/>

            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGray"
                android:layout_below="@+id/tv_payment_method"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btnOrderComplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/size_16dp"
        android:background="@drawable/shape_rounded_accent"
        android:text="@string/back_to_home"
        android:textColor="@color/colorWhite"
        android:padding="@dimen/size_16dp"/>

        <include layout="@layout/progress_dialog"/>

    </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
