<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/accountView"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ly_account"
        android:visibility="visible">
        <RelativeLayout
            android:id="@+id/ll_profil"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:orientation="vertical"
            android:background="@color/colorPrimary"
            android:padding="@dimen/size_16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_24dp">

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="John Doe"
                        android:textSize="@dimen/size_16sp"
                        android:textColor="@color/colorWhite"/>

                    <TextView
                        android:id="@+id/tv_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/edit"
                        android:textStyle="bold"
                        android:textColor="@color/colorAccent"/>
                </RelativeLayout>

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="johndoe@gmail.com"
                    android:textColor="@color/colorWhite"/>

                <TextView
                    android:id="@+id/tvPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="+62 8123456789"
                    android:textColor="@color/colorWhite"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/size_8dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/imgPoint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_coins"
                        android:tint="@color/colorWhite"
                        android:layout_gravity="center"
                        tools:ignore="VectorDrawableCompat" />


                    <ProgressBar
                        android:visibility="gone"
                        android:id="@+id/progressPoint"
                        android:layout_width="24dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/size_10dp"
                        />
                    <TextView
                        android:visibility="visible"
                        android:id="@+id/tvPoint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:paddingLeft="@dimen/size_10dp"
                        android:textColor="@color/colorWhite" />
                </LinearLayout>



            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/size_16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_profil"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGray"/>
            <TextView
                android:id="@+id/tvTermAndCondition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:padding="@dimen/size_16dp"
                android:text="@string/term_and_condition"
                android:drawableLeft="@drawable/ic_info"
                android:drawablePadding="@dimen/size_16dp"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGray"/>

            <TextView
                android:id="@+id/tvPrivacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:padding="@dimen/size_16dp"
                android:text="@string/privacy"
                android:drawableLeft="@drawable/ic_file"
                android:drawablePadding="@dimen/size_16dp"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGray"/>

            <TextView
                android:id="@+id/tvRatting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:padding="@dimen/size_16dp"
                android:text="@string/give_us_rate"
                android:drawableLeft="@drawable/ic_star"
                android:drawablePadding="@dimen/size_16dp"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGray"/>
        </LinearLayout>


        <TextView
            android:id="@+id/tvLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:padding="@dimen/size_16dp"
            android:text="@string/logout"
            android:layout_alignParentBottom="true"
            android:drawableLeft="@drawable/ic_logout"
            android:drawablePadding="@dimen/size_16dp"
            android:textStyle="bold"/>
    </RelativeLayout>

<include layout="@layout/login_activity"
    android:id="@+id/ly_login"
    android:visibility="gone"></include>



    <include layout="@layout/progress_dialog"
        android:visibility="gone"/>
</RelativeLayout>
