<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.stickearn.stickpass.view.login.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_margin="@dimen/size_14dp"
        android:textSize="21sp"
        android:textStyle="bold"
        android:id="@+id/tvTitle"
        android:textColor="@color/colorBlack"/>
    <ScrollView
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/size_16dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/size_14dp"
                    android:src="@mipmap/ic_launcher"/>

                <LinearLayout
                    android:layout_marginTop="@dimen/size_14dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            app:srcCompat="@drawable/ic_phone_black_24dp"
                            android:tint="@color/colorText"
                            tools:ignore="VectorDrawableCompat" />
                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/size_12dp"
                            android:padding="@dimen/size_14dp"
                            android:enabled="false"
                            android:background="@null"
                            android:text="62+"/>
                        <EditText
                            android:id="@+id/etPhoneNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:hint="@string/phone"
                            android:background="@null"
                            android:paddingTop="@dimen/size_14dp"
                            android:paddingBottom="@dimen/size_14dp"
                            android:paddingRight="@dimen/size_14dp"
                            />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorGray"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="@dimen/size_14dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            app:srcCompat="@drawable/ic_email_black_24dp"
                            android:tint="@color/colorText"
                            tools:ignore="VectorDrawableCompat" />
                        <EditText
                            android:id="@+id/etEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:hint="Email"
                            android:background="@null"
                            android:padding="@dimen/size_14dp"
                            android:layout_marginLeft="@dimen/size_12dp"
                            />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorGray"/>
                </LinearLayout>




                <Button
                    android:layout_marginTop="@dimen/size_24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnSend"
                    android:text="@string/send"
                    android:background="@drawable/shape_rounded_accent"
                    style="@style/Widget.AppCompat.Button.Colored"/>

            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</LinearLayout>
